[release-v1.6][i18n]: Updated translations from transifex.

--- a/ca/LC_MESSAGES/ckan.po
+++ b/ca/LC_MESSAGES/ckan.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-02-09 18:46+0000\n"
-"PO-Revision-Date: 2012-02-10 22:15+0000\n"
+"PO-Revision-Date: 2012-02-16 13:23+0000\n"
 "Last-Translator: amercader <amercadero@gmail.com>\n"
 "Language-Team: Catalan (http://www.transifex.net/projects/p/ckan/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -2000,7 +2000,7 @@ msgid ""
 "who owns it and whether it is freely available, and what subject areas the "
 "data is about. Other users can improve or add to this information (CKAN "
 "keeps a fully versioned history)."
-msgstr "Aquest lloc web utilitza un potent programari de catàleg de dades anomenat [1:CKAN], desenvolupat i mantingut per la [2:Open Knowledge Foundation]. Cada registre d'un 'conjunt de dades' a CKAN conté una descripció de les dades i altres informacions útils, com els formats en que es troba disponible, qui n'és el propietari i s'hi es troba disponible lliurement, i a quins àmbits fan referència les dades. Altres usuaris poden millorar-les o afegir més dades d'interés (CKAN guarda un historial de les diferents versions)."
+msgstr "Aquest lloc web utilitza un potent programari de catàleg de dades anomenat [1:CKAN], desenvolupat i mantingut per la [2:Open Knowledge Foundation]. Cada registre d'un 'conjunt de dades' a CKAN conté una descripció de les dades i altres informacions útils, com els formats en que es troba disponible, qui n'és el propietari i si es troba disponible lliurement, i a quins àmbits fan referència les dades. Altres usuaris poden millorar-les o afegir més dades d'interés (CKAN guarda un historial de les diferents versions)."
 
 #: ckan/templates/home/about.html:26
 msgid ""
