--- a/it/LC_MESSAGES/ckan.po
+++ b/it/LC_MESSAGES/ckan.po
@@ -6,14 +6,14 @@
 # <internet@davidread.org>, 2011.
 #   <lafuga2@gmail.com>, 2012.
 # Maurizio Napolitano <maurizio.napolitano@okfn.org>, 2011, 2012.
-# Stefano Costa <steko@iosa.it>, 2011.
+# Stefano Costa <steko@iosa.it>, 2011, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-02-09 18:46+0000\n"
-"PO-Revision-Date: 2012-02-10 12:22+0000\n"
-"Last-Translator: Maurizio Napolitano <maurizio.napolitano@okfn.org>\n"
+"PO-Revision-Date: 2012-02-16 12:19+0000\n"
+"Last-Translator: Stefano Costa <steko@iosa.it>\n"
 "Language-Team: Italian (http://www.transifex.net/projects/p/ckan/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -724,7 +724,7 @@ msgstr "Tag"
 msgid ""
 "Comma-separated terms that may link this dataset to similar ones. For more "
 "information on conventions, see <a href=\"%s\">this wiki page</a>."
-msgstr ""
+msgstr "Lista di termini separati da virgole, che possono essere usati per collegare questo dataset ad altri simili. Ci sono delle convenzioni usate per questi termini, vedi la <a href=\"%s\">pagina wiki</a> al riguardo."
 
 #: ckan/forms/package.py:70 ckan/templates/package/new_package_form.html:143
 msgid "e.g. pollution, rivers, water quality"
@@ -1045,7 +1045,7 @@ msgstr "REST API: Eliminare %s"
 
 #: ckan/logic/action/update.py:49
 msgid "Package resource(s) invalid"
-msgstr ""
+msgstr "Risorsa/e del pacchetto non valide"
 
 #: ckan/logic/action/update.py:51 ckan/logic/action/update.py:63
 #: ckan/logic/action/update.py:75
@@ -1371,7 +1371,7 @@ msgstr "Controllo..."
 
 #: ckan/templates/js_strings.html:18
 msgid "Type at least two characters..."
-msgstr ""
+msgstr "Digita almeno due caratteri..."
 
 #: ckan/templates/js_strings.html:19
 msgid "This URL is available!"
@@ -1397,7 +1397,7 @@ msgstr "Aggiungi un gruppo"
 msgid ""
 "You have unsaved changes. Make sure to click 'Save Changes' below before "
 "leaving this page."
-msgstr ""
+msgstr "Hai delle modifiche non ancora salvate. Ricordati di cliccare su \"Salva le modifiche\" in fondo alla pagina prima di uscire."
 
 #: ckan/templates/js_strings.html:26
 msgid "Loading..."
@@ -1973,7 +1973,7 @@ msgid ""
 "[3:publicly-funded art] in Seattle? Data to answer many, many questions like"
 " these is out there on the Internet somewhere - but it is not always easy to"
 " find."
-msgstr ""
+msgstr "Qual'era il [1:prezzo medio] di una casa nel Regno Unito nel 1935? Quando avverrà il [2:sorpasso] della popolazione dell'India su quella della Cina? Dove si possono ammirare [3:opere d'arte finanziate da enti pubblici] a Seattle? I dati per rispondere a molte, molte domande come queste esistono da qualche parte in Internet - ma non è sempre facile trovarli."
 
 #: ckan/templates/home/about.html:15
 #, python-format
@@ -1984,7 +1984,7 @@ msgid ""
 "Depending on the type of data (and its conditions of use), %(site_title)s "
 "may also be able to store a copy of the data or host it in a database, and "
 "provide some basic visualisation tools."
-msgstr ""
+msgstr "%(site_title)s è un catalogo gestito dalla community, che contiene dataset utili reperibili in Internet. Puoi raccogliere link a dati che hai trovato in rete, in modo che anche altre persone li trovino, oppure puoi semplicemente cercare i dati che altri hanno già aggiunto. A seconda del tipo di dati (e delle loro condizioni d'uso), %(site_title)s può anche salvare una copia dei dati o archiviarli in un database, e mostrare semplici visualizzazioni."
 
 #: ckan/templates/home/about.html:22
 msgid "How it works"
@@ -1999,7 +1999,7 @@ msgid ""
 "who owns it and whether it is freely available, and what subject areas the "
 "data is about. Other users can improve or add to this information (CKAN "
 "keeps a fully versioned history)."
-msgstr ""
+msgstr "Questo sito è basato su un potente software open-source di catalogazione dei dati, chiamato [1:CKAN], sviluppato dalla [2:Open Knowledge Foundation]. Ogni voce di 'dataset' su CKAN contiene una descrizione dei dati e altre informazioni utili, come i formati disponibili, il detentore, la libertà di accesso e riuso, e gli argomenti che i dati affrontano. Gli altri utenti possono migliorare o modificare queste informazioni (CKAN mantiene una cronologia di tutte queste modifiche)."
 
 #: ckan/templates/home/about.html:26
 msgid ""
@@ -2010,7 +2010,7 @@ msgid ""
 "listed in a CKAN catalogue at [3:publicdata.eu]. There is a comprehensive "
 "list of catalogues like these around the world at [4:datacatalogs.org], "
 "which is itself powered by CKAN."
-msgstr ""
+msgstr "CKAN è utilizzato per diversi cataloghi di dati su Internet. [1:The Data Hub] è un catalogo liberamente modificabile e riutilizzabile, nello stile di Wikipedia. Il governo britannico usa CKAN per il portale [2:data.gov.uk], che attualmente conta circa 8000 dataset governativi. I dati pubblici ufficiali della maggior parte dei paesi europei sono raccolti in un catalogo CKAN su [3:publicdata.eu]. Esiste anche una lista di questi cataloghi da tutto il mondo su [4:datacatalogs.org], che è a sua volta basato su CKAN."
 
 #: ckan/templates/home/about.html:29
 msgid "Open data and the Open Knowledge Foundation"
@@ -2026,7 +2026,7 @@ msgid ""
 " artworks when you visit the city. Open data means more enterprise, "
 "collaborative science and transparent government. You can read more about "
 "open data in the [1:Open Data Manual]."
-msgstr ""
+msgstr "La maggior parte dei dati su %(site_title)s è liberamente accessibile e riutilizzabile: chiunque ha il diritto di utilizzare e riutilizzare i dati nel modo che preferisce. Magari qualcuno prenderà quel simpatico dataset sulle opere d'arte della città che avevi trovato tu, e lo aggiungerà a una mappa turistica - oppure svilupperà una nuova app per il tuo smartphone, che ti aiuterà a trovare i monumenti quando visiti la città. Gli open data significano più impresa, ricerca scientifica collaborativa e pubblica amministrazione trasparente. Puoi approfondire questo argomento nell'[1:Open Data Manual]."
 
 #: ckan/templates/home/about.html:33
 msgid ""
@@ -2035,7 +2035,7 @@ msgid ""
 "If you want to get involved with its design or code, join the discussion or "
 "development [3:mailing lists], or take a look at the [4:OKFN] site to find "
 "out about our other projects."
-msgstr ""
+msgstr "La [1:Open Knowledge Foundation] è una organizzazione no-profit che [2:promuove] il sapere libero: lo sviluppo e il miglioramento costante di CKAN è uno dei modi per raggiungere questo obiettivo. Se vuoi partecipare alla progettazione o allo sviluppo, unisciti alle [3:liste pubbliche] di discussione o sviluppo, o dai un'occhiata al sito della [4:OKFN] per scoprire gli altri progetti in corso."
 
 #: ckan/templates/home/index.html:6
 msgid "Welcome"
@@ -2218,7 +2218,7 @@ msgstr "Carica un file"
 msgid ""
 "Comma-separated terms that may link this dataset to similar ones. For more "
 "information on conventions, see [1:this wiki page]."
-msgstr ""
+msgstr "Lista di termini separati da virgole, usati per collegare questo dataset ad altri simili. Ci sono delle convenzioni in uso per questi termini, descritti su [1:questa pagina wiki]."
 
 #: ckan/templates/package/new_package_form.html:166
 msgid "e.g. 1.2.0"
@@ -2226,11 +2226,11 @@ msgstr "es. 1.2.0"
 
 #: ckan/templates/package/new_package_form.html:198
 msgid "Do you really want to change the state of this dataset?"
-msgstr ""
+msgstr "Vuoi veramente modificare lo stato di questo dataset?"
 
 #: ckan/templates/package/new_package_form.html:198
 msgid "Yes!"
-msgstr ""
+msgstr "Si!"
 
 #: ckan/templates/package/new_package_form.html:199
 msgid ""
@@ -2257,7 +2257,7 @@ msgstr "Licenza"
 
 #: ckan/templates/package/read.html:59
 msgid "Related Datasets"
-msgstr ""
+msgstr "Dataset correlati"
 
 #: ckan/templates/package/read.html:87
 msgid "This is an old revision of this dataset, as edited"
@@ -2289,15 +2289,15 @@ msgstr "RDF/Turtle"
 
 #: ckan/templates/package/read_core.html:29
 msgid "Last updated:"
-msgstr ""
+msgstr "Ultimo aggiornamento:"
 
 #: ckan/templates/package/read_core.html:30
 msgid "ago"
-msgstr ""
+msgstr "fa"
 
 #: ckan/templates/package/read_core.html:36
 msgid "[cached]"
-msgstr ""
+msgstr "[cached]"
 
 #: ckan/templates/package/read_core.html:50
 #: ckan/templates/package/resource_read.html:98
@@ -2325,38 +2325,38 @@ msgstr "Nazionalità"
 
 #: ckan/templates/package/read_core.html:91
 msgid "Harvest Source"
-msgstr ""
+msgstr "Sorgente originale"
 
 #: ckan/templates/package/read_core.html:92
 #, python-format
 msgid ""
 "[1:Dataset page] on \n"
 "            [2:%(harvest_catalogue_name)s]"
-msgstr ""
+msgstr "[1:Pagina del dataset] su \n            [2:%(harvest_catalogue_name)s]"
 
 #: ckan/templates/package/resource_read.html:26
 msgid "- Dataset - Resource"
-msgstr ""
+msgstr "- Dataset - Risorsa"
 
 #: ckan/templates/package/resource_read.html:41
 msgid "API Endpoint"
-msgstr ""
+msgstr "API Endpoint"
 
 #: ckan/templates/package/resource_read.html:42
 msgid "Download"
-msgstr ""
+msgstr "Download"
 
 #: ckan/templates/package/resource_read.html:49
 msgid "Part of dataset"
-msgstr ""
+msgstr "Parte del dataset"
 
 #: ckan/templates/package/resource_read.html:53
 msgid "Last updated"
-msgstr ""
+msgstr "Ultimo aggiornamento"
 
 #: ckan/templates/package/resource_read.html:84
 msgid "From the [1:Dataset]:"
-msgstr ""
+msgstr "Dal [1:dataset]:"
 
 #: ckan/templates/package/resources.html:2
 msgid "Someresources"
@@ -2494,7 +2494,7 @@ msgstr "Upload"
 msgid ""
 "This upload form is valid for a limited time (usually 1h or so). If the\n"
 "    form expires please reload the page."
-msgstr ""
+msgstr "Questo modulo di upload è valido per un periodo limitato (di solito 1h). Se il modulo scade, è sufficiente ricaricare la pagina.\n    "
 
 #: ckan/templates/storage/index.html:33
 msgid "File:"
@@ -2502,15 +2502,15 @@ msgstr "File:"
 
 #: ckan/templates/storage/success.html:12
 msgid "Upload - Successful"
-msgstr ""
+msgstr "Upload - Andato a buon fine"
 
 #: ckan/templates/storage/success.html:14
 msgid "Filed uploaded to:"
-msgstr ""
+msgstr "Il file è stato caricato su:"
 
 #: ckan/templates/storage/success.html:17
 msgid "Upload another »"
-msgstr ""
+msgstr "Caricane un altro »"
 
 #: ckan/templates/tag/index.html:20 ckan/templates/tag/index.html:23
 msgid "There are"
@@ -2658,7 +2658,7 @@ msgstr "Accedi usando OpenID"
 msgid ""
 "NB: To set-up your OpenID for this site, you first need to [1:Register] and "
 "then edit your Profile to provide your OpenID."
-msgstr ""
+msgstr "NB: Per configurare il tuo OpenID su questo sito, devi prima [1:registrarti] e poi modificare il tuo profilo, indicando il tuo OpenID."
 
 #: ckan/templates/user/login.html:50
 msgid "Please click your account provider:"
@@ -2719,31 +2719,31 @@ msgstr "- Utente"
 
 #: ckan/templates/user/read.html:24
 msgid "Email"
-msgstr ""
+msgstr "E-mail"
 
 #: ckan/templates/user/read.html:29
 msgid "No email"
-msgstr ""
+msgstr "Nessuna e-mail"
 
 #: ckan/templates/user/read.html:33
 msgid "Member since"
-msgstr ""
+msgstr "Membro dal"
 
 #: ckan/templates/user/read.html:41
 msgid "API Key"
-msgstr ""
+msgstr "API Key"
 
 #: ckan/templates/user/read.html:45
 msgid "– Note: your API key is visible only to you!"
-msgstr ""
+msgstr "– NB: la tua API key è visibile solamente a te!"
 
 #: ckan/templates/user/read.html:58
 msgid "Edits"
-msgstr ""
+msgstr "Modifiche"
 
 #: ckan/templates/user/read.html:71
 msgid "Public Activity"
-msgstr ""
+msgstr "Attività pubblica"
 
 #: ckan/templates/user/request_reset.html:6
 msgid "Reset password"
