--- a/es/LC_MESSAGES/ckan.po
+++ b/es/LC_MESSAGES/ckan.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the ckan project.
 # 
 # Translators:
+#   <amercadero@gmail.com>, 2012.
 #   <ilabastida@ub.edu>, 2011, 2012.
 # <internet@davidread.org>, 2011.
 #   <javierdcm@gmail.com>, 2012.
@@ -13,8 +14,8 @@ msgstr ""
 "Project-Id-Version: CKAN\n"
 "Report-Msgid-Bugs-To: http://trac.ckan.org/\n"
 "POT-Creation-Date: 2012-02-09 18:46+0000\n"
-"PO-Revision-Date: 2012-02-14 13:52+0000\n"
-"Last-Translator: ilabastida <ilabastida@ub.edu>\n"
+"PO-Revision-Date: 2012-02-16 13:34+0000\n"
+"Last-Translator: amercader <amercadero@gmail.com>\n"
 "Language-Team: Spanish (Castilian) (http://www.transifex.net/projects/p/ckan/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,7 +56,7 @@ msgstr "Conjunto de datos"
 
 #: ckanext/stats/templates/ckanext/stats/index.html:51
 msgid "Average rating"
-msgstr "Valoración primedio"
+msgstr "Valoración promedio"
 
 #: ckanext/stats/templates/ckanext/stats/index.html:51
 msgid "Number of ratings"
@@ -98,15 +99,15 @@ msgstr "Usuarios con más conjuntos de datos"
 
 #: ckanext/stats/templates/ckanext/stats/index.html:88
 msgid "Page last updated:"
-msgstr "Página actualizada por última  vez:"
+msgstr "Página actualizada por última vez:"
 
 #: ckanext/stats/templates/ckanext/stats/leaderboard.html:6
 msgid "Leaderboard - Stats"
-msgstr ""
+msgstr "Clasificación - Estadísticas"
 
 #: ckanext/stats/templates/ckanext/stats/leaderboard.html:17
 msgid "Dataset Leaderboard"
-msgstr ""
+msgstr "Clasificación para el conjunto de datos"
 
 #: ckanext/stats/templates/ckanext/stats/leaderboard.html:18
 msgid ""
@@ -152,7 +153,7 @@ msgstr "Grupo de autorización añadido"
 msgid ""
 "Cannot purge package %s as associated revision %s includes non-deleted "
 "packages %s"
-msgstr ""
+msgstr "No se puede purgar el paquete %s ya que la revisión asociada %s incluye paquetes de datos no borrados %s"
 
 #: ckan/controllers/admin.py:287
 #, python-format
@@ -292,7 +293,7 @@ msgstr "Los parámetros requeridos debe estar en forma de un diccionario en cód
 #: ckan/controllers/api.py:615
 #, python-format
 msgid "Bad slug type: %s"
-msgstr ""
+msgstr "Bad slug type: %s"
 
 #: ckan/controllers/authorization_group.py:44
 #, python-format
@@ -549,7 +550,7 @@ msgstr "Se ha restablecido su contraseña."
 
 #: ckan/controllers/user.py:368
 msgid "Error: Could not parse About text"
-msgstr ""
+msgstr "Error: No se ha podido interpretar el texto \"Acerca de\""
 
 #: ckan/controllers/user.py:376
 msgid "Your password must be 4 characters or longer."
@@ -622,7 +623,7 @@ msgstr "No pueden añadirse nuevos grupos."
 msgid ""
 "Can't derived new group selection from serialized value structured like "
 "this: %s"
-msgstr ""
+msgstr "No se puede derivar una nueva selección de grupo a partir de un valor serializado así: %s"
 
 #: ckan/forms/common.py:910
 msgid "other - please specify"
@@ -1766,7 +1767,7 @@ msgid ""
 "Instead of specifying the privileges of specific users on a dataset or group,\n"
 "          you can also specify a set of users that will share the same rights. To do that, an    \n"
 "          [1:authorization group] can be set-up and users can be added to it."
-msgstr ""
+msgstr "En vez de especificar los privilegios de usuarios específicos sobre un paquete o grupo, también puedes especificar un conjunto de usuarios que compartirán los mismos derechos. Para hacerlo, se puede crear un [1:grupo de autorización] y añadirle usuarios."
 
 #: ckan/templates/authorization_group/layout.html:28
 msgid "To create a new authorization group, please first [1:login]."
@@ -1845,7 +1846,7 @@ msgid ""
 "when you want to restrict users from editing a collection. A [1:group] can "
 "be set-up to specify which users have permission to add or remove datasets "
 "from it."
-msgstr ""
+msgstr "A pesar de que las etiquetas son muy útiles para agrupar conjuntos de datos, hay ocasiones en que hace falta restringir la edición dentro de una colección a los usuarios. Se puede crear un [1:grupo] para especificar que usuarios tienen permiso para añadirle o eliminar conjuntos de datos."
 
 #: ckan/templates/group/layout.html:12 ckan/templates/package/layout.html:35
 msgid "History"
@@ -1922,7 +1923,7 @@ msgstr "Puedes usar"
 #: ckan/templates/package/new_package_form.html:75
 #: ckan/templates/user/edit_user_form.html:34
 msgid "Markdown formatting"
-msgstr ""
+msgstr "el formato Markdown"
 
 #: ckan/templates/group/new_group_form.html:37
 #: ckan/templates/package/new_package_form.html:75
@@ -1965,7 +1966,7 @@ msgstr "Estado:"
 #: ckan/templates/group/read.html:45
 #, python-format
 msgid "[1:You searched for \"%(query)s\". ]%(number_of_results)s datasets found."
-msgstr ""
+msgstr "[1:Has buscado \"%(query)s\". ]%(number_of_results)s conjuntos de datos encontrados."
 
 #: ckan/templates/home/about.html:13
 msgid ""
@@ -1974,7 +1975,7 @@ msgid ""
 "[3:publicly-funded art] in Seattle? Data to answer many, many questions like"
 " these is out there on the Internet somewhere - but it is not always easy to"
 " find."
-msgstr ""
+msgstr "Cual era el [1:precio medio] de una casa en el Reino Unido en el año 1935? Cuando se estima que la población de la India [2:superará] la de China? Donde puedo encontrar [3:arte financiado públicamente] en Seattle? Los datos para contestar muchas preguntas como estas se encuentran en algún lugar de la Red, pero no son siempre fáciles de encontrar."
 
 #: ckan/templates/home/about.html:15
 #, python-format
@@ -2000,7 +2001,7 @@ msgid ""
 "who owns it and whether it is freely available, and what subject areas the "
 "data is about. Other users can improve or add to this information (CKAN "
 "keeps a fully versioned history)."
-msgstr ""
+msgstr "Este sitio web utiliza un potente software de catálogo de datos llamado [1:CKAN], desarrollado y mantenido por la [2:Open Knowledge Foundation]. Cada registro de un 'conjunto de datos' en CKAN contiene una descripción de los datos y otras informaciones útiles, como los formatos en que se encuentra disponible, quien es el propietario y si se encuentra disponible libremente, y a qué ámbito hacen referencia los datos. Otros usuarios pueden mejorarlos o añadir más datos de interés (CKAN guarda un historial de las diferentes versiones)."
 
 #: ckan/templates/home/about.html:26
 msgid ""
@@ -2011,7 +2012,7 @@ msgid ""
 "listed in a CKAN catalogue at [3:publicdata.eu]. There is a comprehensive "
 "list of catalogues like these around the world at [4:datacatalogs.org], "
 "which is itself powered by CKAN."
-msgstr ""
+msgstr "CKAN es usado en muchos catálogos de datos disponibles en Internet. [1:The Data Hub] es un catálogo de datos abiertos que se puede editar libremente, de forma similar a la Wikipedia. El gobierno del Reino Unido usa CKAN en [2:data.gov.uk], el cual lista actualmente unos 8,000 conjuntos de datos. Datos públicos oficiales de muchos países europeos se encuentran listados en [3:publicdata.eu]. Podéis encontrar una lista extensa de catálogos similares de todo el mundo en [4:datacatalogs.org], que a su vez también funciona con CKAN."
 
 #: ckan/templates/home/about.html:29
 msgid "Open data and the Open Knowledge Foundation"
@@ -2036,7 +2037,7 @@ msgid ""
 "If you want to get involved with its design or code, join the discussion or "
 "development [3:mailing lists], or take a look at the [4:OKFN] site to find "
 "out about our other projects."
-msgstr ""
+msgstr "La [1:Open Knowledge Foundation] es una organización sin ánimo de lucro que [2:promueve] el conocimiento abierto: desarrollar y mejorar CKAN es una de las maneras en que lo hacemos. Si quieres involucrarte en su diseño o código, únete a las [3:listas de correo] de discusión o desarrollo, o echa un vistazo al sitio web de la [4:OKFN] para descubrir nuestros otros proyectos."
 
 #: ckan/templates/home/index.html:6
 msgid "Welcome"
@@ -2062,7 +2063,7 @@ msgstr "conjuntos de datos"
 msgid ""
 "that you can \n"
 "          browse, learn about and download."
-msgstr ""
+msgstr "que puedes navegar, consultar y descargar."
 
 #: ckan/templates/home/index.html:25
 msgid "Share data"
@@ -2152,7 +2153,7 @@ msgstr "Autor:"
 
 #: ckan/templates/package/edit_form.html:21
 msgid "Since you have not signed in this will just be your IP address."
-msgstr "Puesto que usted no se ha conectado, ésta será su dirección IP."
+msgstr "Puesto que no te has conectado, ésta será tu dirección IP."
 
 #: ckan/templates/package/edit_form.html:23
 msgid "Click here to sign in"
@@ -2168,7 +2169,7 @@ msgid ""
 "[1:Important:] By submitting content, you agree to release your "
 "contributions under the [2:Open Database License]. Please [3:refrain] from "
 "editing this page if you are [4:not] happy to do this."
-msgstr ""
+msgstr "[1:Importante:] Enviando este contenido, acceptas publicar tus contribuciones bajo la [2:Open Database License]. Por favor, [3:evita] editar esta página si [4:no] estás de acuerdo."
 
 #: ckan/templates/package/history.html:61 ckan/templates/package/read.html:103
 msgid "Dataset History"
@@ -2219,7 +2220,7 @@ msgstr "Sube un archivo"
 msgid ""
 "Comma-separated terms that may link this dataset to similar ones. For more "
 "information on conventions, see [1:this wiki page]."
-msgstr ""
+msgstr "Terminos separados por comas que vinculen estos conjuntos de datos con otros similares. Para más información sobre las convenciones, ver [1:esta página wiki]."
 
 #: ckan/templates/package/new_package_form.html:166
 msgid "e.g. 1.2.0"
@@ -2246,7 +2247,7 @@ msgstr "Este conjunto de datos está &nbsp;&nbsp; \n      [1:\n        [2:activo
 msgid ""
 "Since you have not signed in this will just be your IP address.\n"
 "    [1:Click here to sign in] before saving (opens in new window)."
-msgstr ""
+msgstr "Puesto que no te has conectado, ésta será tu dirección IP.\n[1:Haz clic aquí para iniciar la sessión] antes de guardar (abre una nueva ventana)."
 
 #: ckan/templates/package/read.html:14
 msgid "- Datasets"
@@ -2326,14 +2327,14 @@ msgstr "País"
 
 #: ckan/templates/package/read_core.html:91
 msgid "Harvest Source"
-msgstr ""
+msgstr "Fuente del conjunto de datos"
 
 #: ckan/templates/package/read_core.html:92
 #, python-format
 msgid ""
 "[1:Dataset page] on \n"
 "            [2:%(harvest_catalogue_name)s]"
-msgstr ""
+msgstr "[1:Página del conjunto de datos] en\n[2:%(harvest_catalogue_name)s]"
 
 #: ckan/templates/package/resource_read.html:26
 msgid "- Dataset - Resource"
@@ -2659,7 +2660,7 @@ msgstr "Conectar usando Open ID"
 msgid ""
 "NB: To set-up your OpenID for this site, you first need to [1:Register] and "
 "then edit your Profile to provide your OpenID."
-msgstr ""
+msgstr "Nota: para configurar OpenID para este sitio, primero debes [1:Registrarte] y después editar tu perfil para proporcionar tu OpenID."
 
 #: ckan/templates/user/login.html:50
 msgid "Please click your account provider:"
